--- a/AUF.EMR.MVC/Views/Household/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/Household/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <section class="flex justify-center pt-16">
     <div class="w-2/3 my-12">
-        <form asp-action="Edit">
+        <form asp-action="Edit" id="createForm">
             <div>
                 <h1 class="text-xl">Update</h1>
                 <h1 class="text-2xl font-bold text-gray-800 mb-4">Household</h1>
@@ -19,15 +19,15 @@
                 <div>
                     <div class="mb-4">
                         <label asp-for="Household.HouseholdNo" class="block mb-2 text-sm font-medium text-gray-700">Household No.</label>
-                        <input asp-for="Household.HouseholdNo" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2/4 p-2.5" />
+                        <input asp-for="Household.HouseholdNo" required class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2/4 p-2.5" />
                         <span asp-validation-for="Household.HouseholdNo" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-2 mt-8">
                         <h6 class="text-md font-bold text-gray-800">Respondent Personal Information</h6>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="Household.FirstName" class="block mb-2 text-sm font-medium text-gray-700">First Name</label>
-                        <input asp-for="Household.FirstName" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <label asp-for="Household.FirstName"  class="block mb-2 text-sm font-medium text-gray-700">First Name</label>
+                        <input asp-for="Household.FirstName" required class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="Household.FirstName" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
@@ -37,12 +37,12 @@
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.LastName" class="block mb-2 text-sm font-medium text-gray-700">Last Name</label>
-                        <input asp-for="Household.LastName" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <input asp-for="Household.LastName" required class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="Household.LastName" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.ContactNo" class="block mb-2 text-sm font-medium text-gray-700">Contact Number</label>
-                        <input asp-for="Household.ContactNo" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2/4 p-2.5" />
+                        <input asp-for="Household.ContactNo" required class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2/4 p-2.5" />
                         <span asp-validation-for="Household.ContactNo" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-2 mt-8">
@@ -50,22 +50,22 @@
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.HouseNoAndStreet" class="block mb-2 text-sm font-medium text-gray-700">House No. & Street</label>
-                        <input asp-for="Household.HouseNoAndStreet" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <input asp-for="Household.HouseNoAndStreet" required class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="Household.HouseNoAndStreet" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.Barangay" class="block mb-2 text-sm font-medium text-gray-700">Barangay</label>
-                        <input asp-for="Household.Barangay" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <input asp-for="Household.Barangay" required class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="Household.Barangay" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.City" class="block mb-2 text-sm font-medium text-gray-700">City</label>
-                        <input asp-for="Household.City" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <input asp-for="Household.City" required class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="Household.City" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.Province" class="block mb-2 text-sm font-medium text-gray-700">Province</label>
-                        <input asp-for="Household.Province" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <input asp-for="Household.Province" required class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="Household.Province" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                 </div>
@@ -124,32 +124,32 @@
                         </div>
                     </div>
                     <div class="mb-2 mt-8">
-                        <h6 class="text-md font-bold text-gray-800">NHTS Household</h6>
+                        <h6 class="text-md font-bold text-gray-800">National Household Targeting System (NHTS) Household</h6>
                     </div>
                     <div class="mb-4">
                         <div class="flex">
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsNHTS" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsNHTS" required value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsNHTS" class="ms-2 text-sm font-medium text-gray-900">NHTS</label>
                             </div>
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsNHTS" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsNHTS" required value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsNHTS" class="ms-2 text-sm font-medium text-gray-900">Non NHTS</label>
                             </div>
                         </div>
                         <span asp-validation-for="Household.IsNHTS" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-2 mt-8">
-                        <h6 class="text-md font-bold text-gray-800">IP Household</h6>
+                        <h6 class="text-md font-bold text-gray-800">Indigenous people (IP)  Household</h6>
                     </div>
                     <div class="mb-4">
                         <div class="flex">
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsIP" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsIP" required value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsIP" class="ms-2 text-sm font-medium text-gray-900">IP</label>
                             </div>
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsIP" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsIP" required value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsIP" class="ms-2 text-sm font-medium text-gray-900">Non IP</label>
                             </div>
                         </div>
@@ -161,11 +161,11 @@
                     <div class="mb-4">
                         <div class="flex mb-4">
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsHeadPhilhealthMember" value="false" id="philhealthMember" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsHeadPhilhealthMember" required value="false" id="philhealthMember" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsHeadPhilhealthMember" class="ms-2 text-sm font-medium text-gray-900">Philhealth member</label>
                             </div>
                             <div class="flex items-center me-4">
-                                <input asp-for="Household.IsHeadPhilhealthMember" value="false" id="nonPhilhealthMember" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <input asp-for="Household.IsHeadPhilhealthMember" required value="false" id="nonPhilhealthMember" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsHeadPhilhealthMember" class="ms-2 text-sm font-medium text-gray-900">Non Philhealth member</label>
                             </div>
                         </div>
@@ -193,6 +193,25 @@
     </div>
 
 </section>
+<div id="errorModal" tabindex="-1" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
+    <div class="relative p-4 w-full max-w-md">
+        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            <button type="button" onclick="closeModal()" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center">
+                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                </svg>
+                <span class="sr-only">Close modal</span>
+            </button>
+            <div class="p-4 md:p-5 text-center">
+                <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                </svg>
+                <h3 class="mb-5 text-lg font-normal text-gray-500">The form is not complete. Please fill in all required fields.</h3>
+                <button onclick="closeModal()" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>
     const philhealthMemberRadio = document.getElementById('philhealthMember');
@@ -226,4 +245,21 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+
+    <script>
+        document.getElementById("createForm").addEventListener("submit", function (event) {
+            if (!this.checkValidity()) {
+                event.preventDefault();
+                event.stopPropagation();
+
+                // Show modal
+                document.getElementById("errorModal").classList.remove("hidden");
+
+            }
+        });
+
+        function closeModal() {
+            document.getElementById("errorModal").classList.add("hidden");
+        }
+    </script>
 }
