--- a/AUF.EMR.MVC/Views/Masterlist/Adolescent.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Adolescent.cshtml
@@ -20,7 +20,7 @@
                     <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                         <path fill-rule="evenodd" d="M8 3a2 2 0 0 0-2 2v3h12V5a2 2 0 0 0-2-2H8Zm-3 7a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h1v-4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v4h1a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2H5Zm4 11a1 1 0 0 1-1-1v-4h8v4a1 1 0 0 1-1 1H9Z" clip-rule="evenodd" />
                     </svg>
-                    <span class="hidden md:inline font-medium">&nbsp; Print @Model.HouseholdNo</span>
+                    <span class="hidden md:inline font-medium">&nbsp; Print</span>
                 </button>
             </div>
         </div>
